--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner h-100">
 					<div class="carousel-item active h-100">
-						<img src="assets/images/strohl_starbird_building@2x.jpg" class="d-block w-100 h-100" alt="...">
+						<img src="assets/images/strohl_starbird_building@2x.jpg" class="d-block w-100 h-100" alt="starbird building">
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/strohl_home_timbuk2headerslide.jpg" class="d-block w-100" alt="...">
+						<img src="assets/images/strohl_home_timbuk2headerslide.jpg" class="d-block w-100" alt="timbuk2 header pic">
 					</div>
 					<div class="carousel-item">
 						<img src="assets/images/onekingslane_slider@2x.jpg" class="d-block w-100" alt="...">
@@ -63,13 +63,100 @@
 			<div class="container py-5">
 					<div class="row">
 							<div class="col-12">
-								<h2 class="h2 mb-3">Extraordinary ideas deserve exceptional design.</h2>
-								<p>
+								<h2 class="h2 mb-4">Extraordinary ideas deserve exceptional design.</h2>
+								<p class="mb-5">
 										Extraordinary ideas deserve exceptional design.
 										From partnerships with food and retail clients to seed round startups, we’re your guide in turning the intangible into the desirable.</p>
+								<h6 class="h6 font-weight-bold">LET’S CREATE SOMETHING AMAZING.</h6>
 							</div>
 					</div>
 			</div>
+
+			<!-- Third Section -->
+			<div class="grid">
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/americangiant_strohl@2x.jpg" alt="american giant product">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/leckerlee_strohl@2x.jpg" alt="a child eating">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/codenvy_strohl@2x.jpg" alt="sketch of a person">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/googledrive_strohl@2x.jpg" alt="google drive logo">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/presdido_strohl@2x.jpg" alt="drum">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/Timbuk2_strohl@2x.jpg" alt="timbuk2 store door">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/starbird_strohl@2x.jpg" alt="starbird fastfood restaurant">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/smith_strohl@2x.jpg" alt="smith electric vehicle company logo">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/celandine_strohl@2x.jpg" alt="smith electric vehicle company logo">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/justcook_strohl@2x.jpg" alt="just cook spice">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/cassia_strohl@2x.jpg" alt="casia menu">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/catamount_strohl@2x-300x226.jpg" alt="catamount logo">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/livongo_strohl@2x.jpg" alt="livongo logo">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/blackdahlia_strohl@2x.jpg" alt="black dahlia oils">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/esters_strohl@2x.jpg" alt="esters' products">
+					</div>
+				</a>
+				<a class="h-auto p-2" href="#">
+					<div class="d-flex w-100 h-100 bg-secondary">
+						<img class="w-100" src="assets/images/woodfour_strohl@2x.jpg" alt="a man drinking coffee">
+					</div>
+				</a>
+			</div>
+
+			
 
 
 		
