--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="assets/styles/navbar.css">
+		<link rel="stylesheet" href="assets/styles/footer.css">
 		<link rel="stylesheet" href="assets/styles/index.css">
 
 </head>
@@ -167,10 +168,35 @@
 				</div>
 			</div>
 
-			
+			<footer id="footer">
+				<div class="container p-5">
+					<div class="row">
+						<div class="class-12">
+							<h2 class="h2 mb-4">Want to work with us? Drop us a line:</h2>
+							<p>The difference between working with just anyone and finding the perfect partner comes down to two vital things: experience & proficiency. Trust us—we’ve done this before.</p>
+							<p>We’d love to hear from you!</p>
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="class-12 px-4">
+							<p class="mb-1"><a class="text-dark" href="#">chat@strohlsf.com</a></p>
+							<p><a class="text-dark" href="#">Telephone: 1.415.513.5579</a></p>
+							<div class="footer-icons-wrapper">
+								<a><i class="fab fa-facebook-f mr-2"></i></a>
+								<a><i class="fab fa-twitter mr-2"></i></a>
+								<a><i class="fab fa-linkedin-in mr-2"></i></a>
+								<a><i class="fab fa-instagram mr-2"></i></a>
+							</div>
+							<p class="mt-3">Broadcasting from Sunny Bernal Heights <br/>San Francisco, California, 94110<br/>©2007—2020 Strohl, Inc.</p>
+						</div>
+					</div>
+				</div>
+			</footer>
 
 
-		
+		<script src="https://kit.fontawesome.com/14d749f301.js" crossorigin="anonymous"></script>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
