--- a/index.html
+++ b/index.html
@@ -160,25 +160,42 @@
 			<!-- 4th Section -->
 			<div class="container py-5">
 				<div class="row">
-					<div class="col-12">
+					<div class="d-none d-lg-block col-lg-3"></div>
+					<div class="col-12 col-lg-6">
 						<h6 class="h6 font-weight-bold mb-4">WE'RE A SAN FRANCISCO DESIGN STUDIO</h6>
 						<h2 class="h2 mb-5">We create logos, brand identities, packaging, websites, signage, apps, books, posters, illustrations, strategy, icons, stationery, menus, uniforms, collateral, patterns...*</h2>
 						<p>*and all of the other things that you haven’t yet considered.</p>
 					</div>
+					<div class="d-none d-lg-block col-lg-3"></div>
 				</div>
 			</div>
 
 			<footer id="footer">
 				<div class="container p-5">
 					<div class="row">
-						<div class="class-12">
-							<h2 class="h2 mb-4">Want to work with us? Drop us a line:</h2>
+						<h2 class="h2 ml-2 mb-4">Want to work with us? Drop us a line:</h2>
+						<div class="col-12 col-sm-6 col-md-8">
 							<p>The difference between working with just anyone and finding the perfect partner comes down to two vital things: experience & proficiency. Trust us—we’ve done this before.</p>
 							<p>We’d love to hear from you!</p>
 						</div>
+						<div class="container d-none d-sm-block col-sm-6 col-md-4">
+							<div class="row">
+								<div class="class-12 px-4">
+									<p class="mb-1"><a class="text-dark" href="#">chat@strohlsf.com</a></p>
+									<p><a class="text-dark" href="#">Telephone: 1.415.513.5579</a></p>
+									<div class="footer-icons-wrapper">
+										<a><i class="fab fa-facebook-f mr-2"></i></a>
+										<a><i class="fab fa-twitter mr-2"></i></a>
+										<a><i class="fab fa-linkedin-in mr-2"></i></a>
+										<a><i class="fab fa-instagram mr-2"></i></a>
+									</div>
+									<p class="mt-3">Broadcasting from Sunny Bernal Heights <br/>San Francisco, California, 94110<br/>©2007—2020 Strohl, Inc.</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="container">
+				<div class="container d-sm-none">
 					<div class="row">
 						<div class="class-12 px-4">
 							<p class="mb-1"><a class="text-dark" href="#">chat@strohlsf.com</a></p>
