--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
 			</div>
 
 			<!-- Second Section -->
-			<div class="container py-5">
-					<div class="row">
-							<div class="col-12">
-								<h2 class="h2 mb-4">Extraordinary ideas deserve exceptional design.</h2>
+			<div class="container py-5 my-lg-5">
+					<div class="row justify-content-center">
+							<div class="col-12 col-lg-8">
+								<h2 class="mb-4">Extraordinary ideas deserve exceptional design.</h2>
 								<p class="mb-5">
 										Extraordinary ideas deserve exceptional design.
 										From partnerships with food and retail clients to seed round startups, we’re your guide in turning the intangible into the desirable.</p>
-								<h6 class="h6 font-weight-bold">LET’S CREATE SOMETHING AMAZING.</h6>
+								<h6 class="font-weight-bold">LET’S CREATE SOMETHING AMAZING.</h6>
 							</div>
 					</div>
 			</div>
 
 			<!-- Third Section -->
-			<div class="grid">
+			<div class="grid m-lg-5">
 				<a class="h-auto p-2" href="#">
 					<div class="d-flex w-100 h-100 bg-secondary">
 						<img class="w-100" src="assets/images/americangiant_strohl@2x.jpg" alt="american giant product">
@@ -159,21 +159,19 @@
 
 			<!-- 4th Section -->
 			<div class="container py-5">
-				<div class="row">
-					<div class="d-none d-lg-block col-lg-3"></div>
-					<div class="col-12 col-lg-6">
-						<h6 class="h6 font-weight-bold mb-4">WE'RE A SAN FRANCISCO DESIGN STUDIO</h6>
-						<h2 class="h2 mb-5">We create logos, brand identities, packaging, websites, signage, apps, books, posters, illustrations, strategy, icons, stationery, menus, uniforms, collateral, patterns...*</h2>
+				<div class="row justify-content-center">
+					<div class="col-12 col-lg-8">
+						<h6 class="font-weight-bold mb-4">WE'RE A SAN FRANCISCO DESIGN STUDIO</h6>
+						<h2 class="mb-5">We create logos, brand identities, packaging, websites, signage, apps, books, posters, illustrations, strategy, icons, stationery, menus, uniforms, collateral, patterns...*</h2>
 						<p>*and all of the other things that you haven’t yet considered.</p>
 					</div>
-					<div class="d-none d-lg-block col-lg-3"></div>
 				</div>
 			</div>
 
 			<footer id="footer">
 				<div class="container p-5">
 					<div class="row">
-						<h2 class="h2 ml-2 mb-4">Want to work with us? Drop us a line:</h2>
+						<h2 class="ml-2 mb-4">Want to work with us? Drop us a line:</h2>
 						<div class="col-12 col-sm-6 col-md-8">
 							<p>The difference between working with just anyone and finding the perfect partner comes down to two vital things: experience & proficiency. Trust us—we’ve done this before.</p>
 							<p>We’d love to hear from you!</p>
