--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="assets/styles/navbar.css">
 		<link rel="stylesheet" href="assets/styles/footer.css">
+		<link rel="stylesheet" href="assets/styles/style.css">
 		<link rel="stylesheet" href="assets/styles/index.css">
 
 </head>
