--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 </head>
 <body>
-		<!-- Navbar -->
-		<nav class="navbar navbar-light bg-transparent fixed-top py-0">
+			<!-- Navbar -->
+			<nav class="navbar navbar-light bg-transparent fixed-top py-0">
 				<a class="navbar-brand py-0" href="#"><img src="assets/images/STROHLLOGO.svg"/></a>
 				<button class="navbar-toggler align-self-start mt-3 border-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -62,7 +62,7 @@
 			</div>
 
 			<!-- Second Section -->
-			<div class="container py-5 my-lg-5">
+			<div class="container py-5 py-xl-0 d-flex align-items-center custom-height">
 					<div class="row justify-content-center">
 							<div class="col-12 col-lg-8">
 								<h2 class="mb-4">Extraordinary ideas deserve exceptional design.</h2>
@@ -159,7 +159,7 @@
 			</div>
 
 			<!-- 4th Section -->
-			<div class="container py-5">
+			<div class="container py-5 py-xl-0 d-flex align-items-center custom-height">
 				<div class="row justify-content-center">
 					<div class="col-12 col-lg-8">
 						<h6 class="font-weight-bold mb-4">WE'RE A SAN FRANCISCO DESIGN STUDIO</h6>
@@ -170,7 +170,7 @@
 			</div>
 
 			<footer id="footer">
-				<div class="container p-5">
+				<div class="container p-5 p-sm-2">
 					<div class="row">
 						<h2 class="ml-2 mb-4">Want to work with us? Drop us a line:</h2>
 						<div class="col-12 col-sm-6 col-md-8">
@@ -183,12 +183,12 @@
 									<p class="mb-1"><a class="text-dark" href="#">chat@strohlsf.com</a></p>
 									<p><a class="text-dark" href="#">Telephone: 1.415.513.5579</a></p>
 									<div class="footer-icons-wrapper">
-										<a><i class="fab fa-facebook-f mr-2"></i></a>
-										<a><i class="fab fa-twitter mr-2"></i></a>
-										<a><i class="fab fa-linkedin-in mr-2"></i></a>
-										<a><i class="fab fa-instagram mr-2"></i></a>
+										<a class="text-secondary" href="#"><i class="fab fa-facebook-f mr-2"></i></a>
+										<a class="text-secondary" href="#"><i class="fab fa-twitter mr-2"></i></a>
+										<a class="text-secondary" href="#"><i class="fab fa-linkedin-in mr-2"></i></a>
+										<a class="text-secondary" href="#"><i class="fab fa-instagram mr-2"></i></a>
 									</div>
-									<p class="mt-3">Broadcasting from Sunny Bernal Heights <br/>San Francisco, California, 94110<br/>©2007—2020 Strohl, Inc.</p>
+									<p class="mt-3 text-secondary">Broadcasting from Sunny Bernal Heights <br/>San Francisco, California, 94110<br/>©2007—2020 Strohl, Inc.</p>
 								</div>
 							</div>
 						</div>
