change navbar links

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 <body>
 			<!-- Navbar -->
 			<nav class="navbar navbar-light bg-transparent fixed-top py-0">
-				<a class="navbar-brand py-0" href="#"><img src="assets/images/STROHLLOGO.svg"/></a>
+				<a class="navbar-brand py-0" href="index.html"><img src="assets/images/STROHLLOGO.svg"/></a>
 				<button class="navbar-toggler align-self-start mt-3 border-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
-						<a class="nav-link active" href="#">Projects<span class="sr-only">(current)</span></a>
-						<a class="nav-link" href="#">Logos</a>
-						<a class="nav-link" href="#">About</a>
+						<a class="nav-link active" href="projects.html">Projects<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="logos.html">Logos</a>
+						<a class="nav-link" href="about.html">About</a>
 						<a class="nav-link" href="#">Contact</a>
 					</div>
 				</div>
@@ -169,6 +169,7 @@
 				</div>
 			</div>
 
+			<!-- Footer -->
 			<footer id="footer">
 				<div class="container p-5 p-sm-2">
 					<div class="row">
